Fix tiny jumps (thanks @Cipscis)

--- a/dev/sass/master.scss
+++ b/dev/sass/master.scss
@@ -13,10 +13,10 @@ body {
 }
 
 .core {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  align-items: center;
   font-family: Open Sans, sans-serif;
   color: white;
 
